Third update, slight changes to landage with resized images and configured to fit smaller screens. Major changes to about page

--- a/about.html
+++ b/about.html
@@ -2,12 +2,15 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="art/others/favicon.png">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <link rel="icon" href="../../art/others/favicon.png">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.css" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/aboutStyle.css">
+        <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Playfair+Display+SC&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>        <link rel="stylesheet" href="css/indexStyle.css">
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <title>Sobre Nosotros</title>    
     </head>
     <body>
@@ -49,6 +52,117 @@
               </form>
             </div>
         </nav>
-        <!-- NAVBAR FINISH -->        
+        <!-- NAVBAR FINISH -->
+        <div>
+          <img src="art/others/EarthMap2.png" alt="Oh no! Something went wrong! :(" style="width:100%;">
+          <div class="container">
+            <h1 class="centered"><b>SOBRE NOSOTROS</b></h1>
+          </div>
+        </div>
+        <h3><b> Qué es Muebles Joselito?</b></h3>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h6> Muebles Joselito es una productora y distribuidora de muebles a lo largo del continente americano, con sedes en Argentina, Peru, Colombia, Venezuela, Brasil, Puerto Rico, Cuba, Canadá, Paraguay, Ecuador, Mexico y los Estados Unidos. Con sede principal en Santiago de Chile</h6>
+        <h6> Nuestra mision es brindarte con los mejores muebles de la mejor calidad y precio posible para que puedas equipar tu casa con una belleza y modernidad digna del Siglo XXI, y todo para ser la envidia del barrio ;)</h6>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <div class="card">
+                        <img src="art/others/Avatar1.png" alt="Oh no, la foto desapareció! No te preocupes, la recuperaremos pronto" style="width:100%">
+                        <h3>Jose Litoania</h3>
+                        <p class="title">CEO & Fundador</p>
+                        <p>Universidad de Harvard</p>
+                        <a href="#"><i class="fa fa-dribbble"></i> Dribble</a> 
+                        <a href="#"><i class="fa fa-twitter"></i> Twitter</a> 
+                        <a href="#"><i class="fa fa-linkedin"></i> LinkedIn</a> 
+                        <a href="#"><i class="fa fa-facebook"></i> Facebook</a> 
+                        <p><button class="button-card">Contacto</button></p>
+                    </div>
+                </div>
+                    <div class="col-sm">
+                  <div class="card">
+                      <img src="art/others/Avatar2.png" alt="Oh no, la foto desapareció! No te preocupes, la recuperaremos pronto" style="width:100%">
+                      <h3>Joseli Toalha</h3>
+                      <p class="title">CTO & Co-Fundadora</p>
+                      <p>Universidad de Cambridge</p>
+                      <a href="#"><i class="fa fa-youtube"></i> YouTube</a> 
+                      <a href="#"><i class="fa fa-twitter"></i> Twitter</a> 
+                      <a href="#"><i class="fa fa-instagram"></i> Instagram</a> 
+                      <a href="#"><i class="fa fa-facebook"></i> Facebook</a> 
+                      <p><button class="button-card">Contacto</button></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- CARDS FINISH -->
+        <br>
+        <br>
+        <br>
+        <br>
+        <h3><b>Trabajar con nosotros? O simplemente contactarnos? Hazlo!</b></h3>
+        <br>
+        <br>
+        <!-- FORM START -->
+        <form>
+            <div class="form-row">
+              <div class="form-group">
+                <label for="inputAddress" class="moveRight">Adress1</label>
+                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Boulevard Importante">
+              </div>
+              <div class="form-group">
+                <label for="inputAddress2" class="moveRight">Address2</label>
+                <input type="text" class="form-control" id="inputAddress2" placeholder="Segunda calle (esq. Avenida principal)">
+              </div>
+              <div class="form-group">
+                  <label for="inputAddress3">Address3</label>
+                  <input type="text" class="form-control" id="inputAddress2" placeholder="Departamento, n° de casa, piso">
+              </div>
+            </div>
+            <div class="form-row">
+            <div class="col-md-2">
+                <label for="inputState">País</label>
+                <input type="text" class="form-control" id="inputCountry">
+              </div>
+              <div class="col-md-2">
+                <label for="inputCity">Ciudad</label>
+                <input type="text" class="form-control" id="inputCity">
+              </div>
+              <div class="col-md-2">
+                <label for="inputState">Estado</label>
+                <input type="text" class="form-control" id="inputState">
+              </div>
+              <div class="col-md-2">
+                <label for="inputZip">Codigo Postal</label>
+                <input type="text" class="form-control" id="inputZip">
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="gridCheck">
+                <label class="form-check-label" for="gridCheck">
+                  Recibe nuestras noticias!
+                </label>
+              </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Enviar</button>
+          </form>
+        </div>
+        <!-- FORM FINISH -->
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <footer>
+            <a class="navbar-brand" href="index.html">Muebles Joselito</a>
+            <p>Contáctanos</p>
+        </footer>
     </body>
 </html>
