--- a/index.html
+++ b/index.html
@@ -55,16 +55,20 @@
         <br>
         <br>
         <br>
+        <!-- SLOGAN -->
         <h3 class="slogan rounded-pill"><b> Los mejores muebles del hemisferio sur (y el norte tambien).</b></h3>
+        <!-- SLOGAN -->
         <br>
         <br>
         <br>
+        <!-- SEARch BAR -->
         <nav class="navbar navbar-dark bg-dark rounded-pill searchbar">
             <form class="form-inline">
               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
         </nav>
+        <!-- SEARCH BAR -->
         <br>
         <br>
         <h5 class="white-background over-gallery"><b> Lo mejor para equipar tu casa</b></h5>
@@ -142,19 +146,19 @@
         <!-- FEATURED CONTENT START -->
         <div class="card-columns">
             <div class="card product bg-dark mb-3">
-                <a href="#"><img src="art/furniture/Toilet.jpg" class="card-img-top" alt="..."></a>
+                <a href="#"><img src="art/furniture/Toilet.jpg" class="card-img-top" alt="Oh no, esto era un inodoro! No te preocpes, reemplazaremos con una foto igual de bonita dentro de poco"></a>
             </div>
             <div class="card product bg-dark mb-3">
-                <a href="#"><img src="art/furniture/TVTable.jpg" class="card-img-top" alt="..."></a>
+                <a href="#"><img src="art/furniture/TVTable.jpg" class="card-img-top" alt="Oh no, esto era una mesa para televisión! No te preocpes, reemplazaremos con una foto igual de bonita dentro de poco"></a>
             </div>
             <div class="card product bg-dark mb-3">
-                <a href="#"><img src="art/furniture/Chair.jpg" class="card-img-top" alt="..."></a>
+                <a href="#"><img src="art/furniture/Chair.jpg" class="card-img-top" alt="Oh no, esto era una silla! No te preocpes, reemplazaremos con una foto igual de bonita dentro de poco"></a>
             </div>
             <div class="card product bg-dark mb-3">
-                <a href="#"><img src="art/furniture/DiningTable.jpg" class="card-img-top" alt="..."></a>
+                <a href="#"><img src="art/furniture/DiningTable.jpg" class="card-img-top" alt="Oh no, esto era una mesa! No te preocpes, reemplazaremos con una foto igual de bonita dentro de poco"></a>
             </div>
             <div class="card product bg-dark mb-3">
-                <a href="#"><img src="art/furniture/Desk.jpg" class="card-img-top" alt="..."></a>
+                <a href="#"><img src="art/furniture/Desk.jpg" class="card-img-top" alt="Oh no, esto era un escritorio! No te preocpes, reemplazaremos con una foto igual de bonita dentro de poco"></a>
             </div>
             <div class="card product bg-primary text-white text-center p-3">
               <blockquote class="blockquote mb-0">
@@ -167,7 +171,7 @@
               </blockquote>
             </div>
             <div class="card product bg-dark mb-3">
-              <a href="#"><img src="art/furniture/Bed.jpg" class="card-img-top" alt="..."></a>
+              <a href="#"><img src="art/furniture/Bed.jpg" class="card-img-top" alt="Oh no, esto era una cama! No te preocpes, reemplazaremos con una foto igual de bonita dentro de poco"></a>
               
             </div>
             <div class="card product bg-primary text-white text-center p-3">
@@ -181,28 +185,26 @@
               </blockquote>
             </div>
             <div class="card product bg-dark mb-3">
-                <a href="#"><img src="art/furniture/Fridge.jpg" class="card-img-top" alt="..."></a>
+                <a href="#"><img src="art/furniture/Fridge.jpg" class="card-img-top" alt="Oh no, esto era un refrigerador! No te preocpes, reemplazaremos con una foto igual de bonita dentro de poco"></a>
             </div>
             <div class="card product bg-dark mb-3">
-              <a href="#"><img src="art/furniture/OutdoorLamp.jpg" class="card-img-top" alt="..."></a>
+              <a href="#"><img src="art/furniture/OutdoorLamp.jpg" class="card-img-top" alt="Oh no, esto era una lámpara de exterior! No te preocpes, reemplazaremos con una foto igual de bonita dentro de poco"></a>
             </div>
             <div class="card pdoruct bg-dark mb-3">
-                <a href="#"><img src="art/furniture/Sofa.jpg" class="card-img-top" alt="..."></a>
+                <a href="#"><img src="art/furniture/Sofa.jpg" class="card-img-top" alt="Oh no, esto era un sofá! No te preocpes, reemplazaremos con una foto igual de bonita dentro de poco"></a>
             </div>
             <div class="card product bg-dark mb-3">
-                <a href="#"><img src="art/furniture/Shower.jpg" class="card-img-top" alt="..."></a>
+                <a href="#"><img src="art/furniture/Shower.jpg" class="card-img-top" alt="Oh no, esto era una ducha! No te preocpes, reemplazaremos con una foto igual de bonita dentro de poco"></a>
             </div>
             <div class="card product bg-dark mb-3">
-                <a href="#"><img src="art/furniture/DeskChair.jpg" class="card-img-top" alt="..."></a>
+                <a href="#"><img src="art/furniture/DeskChair.jpg" class="card-img-top" alt="Oh no, esto era una silla de escritorio!! No te preocpes, reemplazaremos con una foto igual de bonita dentro de poco"></a>
             </div>
             <div class="card product bg-dark mb-3">
-                <a href="#"><img src="art/furniture/SunBathChair.jpg" class="card-img-top" alt="..."></a>
+                <a href="#"><img src="art/furniture/SunBathChair.jpg" class="card-img-top" alt="Oh no, esto era un sllón de exterior! No te preocpes, reemplazaremos con una foto igual de bonita dentro de poco"></a>
                 
             </div>
           </div>
         <!-- FEATURED CONTENT FINISH -->
-        <br>
-        <br>
         <br>
         <h5 class="white-background"><b> Dónde encontrarnos</b></h5>
         <br>
