Fourth update, Many visual changes to the about tab, to fit smaller screens, and expanded the fields on the contact form

--- a/about.html
+++ b/about.html
@@ -111,31 +111,55 @@
         <!-- FORM START -->
         <form>
             <div class="form-row">
+              <div class="form-group col-md-3">
+                <label for="inputEmail4">Nombre</label>
+                <input type="email" class="form-control" id="inputEmail4" placeholder="Juan">
+              </div>
+              <div class="form-group col-md-3">
+                <label for="inputEmail4">Apellido</label>
+                <input type="email" class="form-control" id="inputEmail4" placeholder="Martinez">
+              </div>
+              <div class="form-group col-md-3">
+                <label for="inputPassword4">Motivo de contacto</label>
+                <input type="password" class="form-control" id="inputPassword4" placeholder="Trabajo / Negocios">
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="inputEmail4">E-Mail</label>
+                <input type="email" class="form-control" id="inputEmail4" placeholder="JuanMartinez@gmail.com">
+            </div>
+              <div class="form-group col-md-2">
+                <label for="inputEmail4">Teléfono</label>
+                <input type="email" class="form-control" id="inputEmail4" placeholder="+56 9 1234 5678">
+              </div>
+            </div>
+            <div class="form-row">
               <div class="form-group">
-                <label for="inputAddress" class="moveRight">Adress1</label>
+                <label for="inputAddress">Dirección 1</label>
                 <input type="text" class="form-control" id="inputAddress" placeholder="1234 Boulevard Importante">
               </div>
               <div class="form-group">
-                <label for="inputAddress2" class="moveRight">Address2</label>
+                <label for="inputAddress2">Direción 2</label>
                 <input type="text" class="form-control" id="inputAddress2" placeholder="Segunda calle (esq. Avenida principal)">
               </div>
               <div class="form-group">
-                  <label for="inputAddress3">Address3</label>
+                  <label for="inputAddress3">Información Adicional</label>
                   <input type="text" class="form-control" id="inputAddress2" placeholder="Departamento, n° de casa, piso">
               </div>
             </div>
             <div class="form-row">
-            <div class="col-md-2">
+            <div class="col-md-3">
                 <label for="inputState">País</label>
-                <input type="text" class="form-control" id="inputCountry">
+                <input type="text" class="form-control" id="inputCountry" placeholder="Chile">
               </div>
-              <div class="col-md-2">
+              <div class="col-md-3">
                 <label for="inputCity">Ciudad</label>
-                <input type="text" class="form-control" id="inputCity">
+                <input type="text" class="form-control" id="inputCity" placeholder="Santiago">
               </div>
-              <div class="col-md-2">
+              <div class="col-md-3">
                 <label for="inputState">Estado</label>
-                <input type="text" class="form-control" id="inputState">
+                <input type="text" class="form-control" id="inputState" placeholder="Región Metropolitana">
               </div>
               <div class="col-md-2">
                 <label for="inputZip">Codigo Postal</label>
