Minor changes on index and about

--- a/about.html
+++ b/about.html
@@ -59,13 +59,13 @@
             <h1 class="centered"><b>SOBRE NOSOTROS</b></h1>
           </div>
         </div>
-        <h3><b> Qué es Muebles Joselito?</b></h3>
+        <h3><b> </b></h3>
         <br>
         <br>
         <br>
         <br>
-        <h6> Muebles Joselito es una productora y distribuidora de muebles a lo largo del continente americano, con sedes en Argentina, Peru, Colombia, Venezuela, Brasil, Puerto Rico, Cuba, Canadá, Paraguay, Ecuador, Mexico y los Estados Unidos. Con sede principal en Santiago de Chile</h6>
-        <h6> Nuestra mision es brindarte con los mejores muebles de la mejor calidad y precio posible para que puedas equipar tu casa con una belleza y modernidad digna del Siglo XXI, y todo para ser la envidia del barrio ;)</h6>
+        <h6> El objetivo general de la Fundación es contribuir con el tratamiento integral de los niños con cáncer y leucemia del país (Plan AUGE y GES), ayudando a su desarrollo integral, mejorando su calidad de vida y fortaleciendo su integración social y familiar.</h6>
+        <h6> En el año 1992 se creó la Fundación Oncológica Las Condes, atendiendo a niños y adultos con cáncer. En el año 2000 se modifican sus estatutos según el decreto N° 994 publicado en el Diario Oficial N° 36817, para atender solamente a niños con cáncer.</h6>
         <br>
         <br>
         <br>
