--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">Sobre nosotros</a>
                 </li>
-                <audio src="audio/Elevator Music.mp3" controls autoplay loop></audio>
+                <audio src="audio/Elevator Music.mp3" controls autoplay loop><p>Si estás leyendo esto, tu navegador no soporta reproductor de música :(</p></audio>
               </ul>
               <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -141,8 +141,6 @@
         </div>
         <h5 class="white-background"><b> Podría interesarte</b></h5>
         <!-- GALLERY FINISH -->
-        <br>
-        <br>
         <br>
         <br>
         <!-- FEATURED CONTENT START -->
